# usp-cs-courses

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
generate_assets_config/: main.py
usp_cs_courses/: __init__.py  assets.py  settings.py
